templates/pure/style.css
/* ... */
@media only screen and (min-width: 640px) {
    .comment_content pre {
        min-width: 20em;
    }
    .comment.commentlevel-maxpart pre:after {
        content: initial;
    }
    .comment.commentlevel-maxpart code {
        display: initial;
    }
}

.comment.odd > .comment_content {
    background-color: #fafafa;
}
.comment > footer, .trackback-url, .comment-view, .comments-enable {
    font-size: 13px;
    font-size: 0.8125rem;
}
.comment ul.meta {
    padding: .25em .5em;
    font-size: 14px;
    font-size: .875rem; }
    .meta li {
      display: inline-block; }
      .meta li:after {
        color: #d827a0;
        font-weight: bold;
        content: ' | '; }
      .meta li:last-child:after {
        content: ''; }
.comments_permalink {
    margin: .5em auto;
    width: auto;
    overflow: hidden;      /* this is more or less for Chromium, */
    word-wrap: break-word; /* to explicit break a long bounded word in C/P/T comment pages, */
    overflow-wrap: break-word; /* CSS3 Draft */
    word-break: break-all; /* which does expand the flexing content width on certain screens */
}

/*.serendipity_commentsTitle*/
.comment > h4 {
    margin: .5em auto;
    padding-left: .5em;
    line-height: 1.5;
}
@media only screen and (min-width: 640px) {
    .comment > h4 {
        line-height: initial;
    }
}
.serendipity_commentsLabel {
    font-size: 15px;
    font-size: .938rem;
    font-weight: bold;
    vertical-align: top;
}
.serendipity_commentsLabel input {
    margin: .1em .2em 0 0;
}
.serendipity_commentsLabel label {
    vertical-align: bottom;
}
.serendipity_commentsValue input:not(type="button"),
.serendipity_commentsValue select,
.serendipity_commentsValue textarea {
    font-size: 16px;
    font-size: 1rem;
    padding: 2px;
    width: 100%;
    max-width: 42em;
}
.serendipity_commentForm {
    padding: .5em;
    background-color: #fdfdfd;
    border: 1px solid #efefef;
}
.serendipity_comment {
    font-size: 13px;
    font-size: .8125rem;
    margin: 1em 1em 0;
    padding: 0.25em;
    overflow: auto;
}
.serendipity_comment h4 {
    margin: .25em auto .5em;
    line-height: 1.5;
}
.serendipity_commentForm table {
    border-collapse: separate;
    border-spacing: 2px;
}
.serendipity_comment_author_self h4 .pc-owner {
    background: #3e5f81e6;
    padding: .0075em .15em;
    border-radius: 3px;
    border: 1px solid #999;
    color: #efefef;
    font-style: normal;
    text-shadow: 1px 1px 2px #222;
}
.comment_oddbox,
.serendipity_comment.odd {
    background-color: #f8f8f8;
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
}
.serendipity_section_commentform {
    font-size: 15px;
    font-size: .938rem;
}
/* Serendipity Styx comment summary pages */
.comments_for_entry .comment_content {
    margin-bottom: 1em; }
.comments_by_author_pagination {
    text-align: center; }
.comments_by_author_pagination.top {
    margin-top: 1em; }
.comments_by_author_pagination.bottom {
    margin: 1.5em auto; }

article.post.byauthor {
    background: #fefefe;
    border: 1px solid #ddd;
    margin-bottom: .75em;
    padding-bottom: .75em;
}
.byauthor h3 {
    margin-top: .5em;
    margin-left: .25em;
}

/** Archives **/
.archive {
    width: 100%;
}
.archive_overview {
    width: 100%;
    display: block;
}
.archive h2 {
    margin: .5em auto;
}
.archive_year {
    width: 100%;
    display: inline-block;
    margin: auto 1em 1em auto;
    background-color: #f2f2f2;
    border: 1px solid #ddd;
    border-radius: 4px;
    padding: 0 1em;
}
.archive dl {
    display: block;
}
.archive dt, .archive dd {
    width: 48%;
    display: inline-block;
    margin-bottom: .5em;
}
.archive dd {
    text-align: right;
}
.archives_graph img {
    height: 1em;
    border: 1px solid #000;
}
.archive_summary dd {
    text-align: left;
    width: 100%;
    margin-bottom: 1em;
}

/** Sidebars **/

/* Container for each item on the sidebar */
.serendipitySideBarItem {}
section.sidebar_widget {
    margin-bottom: 1em;
    font-size: 13px;
    font-size: .8125rem;
    font-weight: normal;
    border-bottom: 1px solid #DDD;
}
/* title of an individual sidebar item */
.serendipitySideBarTitle {}
/* content of sidebar widget */
.serendipitySideBarContent,
.sidebar_content {}

/* categories */
#serendipity_categories_list {
    list-style: none;
    margin: 0;
    padding: 0;
}
#serendipity_categories_list img {
    vertical-align: middle;
}
/* calendar */
table.serendipity_calendar {
    border-collapse: separate;
    border-spacing: .5em;
}
.serendipity_calendar .icon-back::before {
    content: "<";
}
.serendipity_calendar .icon-next::before {
    content: ">";
}
.serendipity_calendar .icon {
    display: inline-table;
    font-weight: 600;
    font-size: 1.065rem;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.serendipity_calendarHeader {
    text-align: center;
}
table.serendipity_calendar td {
    font-size: 11px;
    font-size: .6875rem;
    text-align: center;
    padding: 0.25em;
}
table.serendipity_calendar a {
    color: #ff4136;
    font-weight: bold;
    text-decoration: none;
}
table.serendipity_calendar a:hover {
    text-decoration: none;
}
td.serendipity_weekDayName {
    font-size: 11px;
    font-size: .6875rem;
    font-weight: bold;
}
td.serendipity_calendarHeader a:link,
td.serendipity_calendarHeader a:visited,
td.serendipity_calendarHeader a:hover {
    border: 0 none;
    text-decoration: none;
}
.calendar-nav {
    width: 100%;
    text-align: center;
}
.calendar-nav a {
    text-decoration: none;
}
.calendar-nav span {
    display: none;
}

/* Powered by */
div.serendipityPlug {
    padding-left: 1em;
}
div.serendipityPlug a {
    text-decoration: none;
    border: 0 none;
}
/* staticpage */
.staticpage_sbList {
    margin: 0;
    padding: 0; }
.staticpage_sbJsList {
    overflow: hidden;
    white-space: nowrap;
    padding-bottom: 1em;
}
/* ... */

